# malai-client

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish-android.yml  publish-archlinux.yml  publishPC.yml
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/src/: http_bridge.rs  lib.rs  main.rs  tcp_bridge.rs  tcp_udp_bridge.rs  udp_bridge.rs
