[package]
name = "malai-client"
version = "0.1.0"
description = "A Tauri App"
authors = ["ovo-tim"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "malai_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
tauri-plugin-os = "2"
tokio = "1.47.1"
eyre = "0.6.12"
tracing = "0.1.41"
hyper = "1.6.0"
hyper-util = "0.1.16"
tracing-subscriber = "0.3.19"
kulfi-utils = "=0.1.1"
iroh = "=0.35.0"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-notification = "2"
